--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,14 +5,18 @@ bcrypt==5.0.0
 cffi==2.0.0
 click==8.3.0
 cryptography==46.0.3
+diskcache==5.6.3
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.119.1
 h11==0.16.0
 idna==3.11
+Jinja2==3.1.6
+llama_cpp_python==0.3.16
 Mako==1.3.10
 MarkupSafe==3.0.3
+numpy==2.3.5
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
