--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.17.1
 annotated-types==0.7.0
 anyio==4.11.0
-bcrypt==5.0.0`
+bcrypt==5.0.0
 cffi==2.0.0
 click==8.3.0
 cryptography==46.0.3
